# OpenGL_GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.sh  run.sh
include/Engine/: EBO.hpp  Entity.hpp  FBO.hpp  GBuffer.hpp  ShadowMap.hpp  Transform.hpp  VAO.hpp  VBO.hpp  camera.hpp  light.hpp  material.h  mesh.hpp  model.hpp  modelDefault.hpp  modelGLTF.hpp  modelLoader.hpp  modelOBJ.hpp  shader.hpp  texture.hpp  vertex.h
include/GameComponent/: GameComponent.hpp  LightRenderer.hpp  ModelRenderer.hpp
include/GameObject/: GameObject.hpp  Scene.hpp
resources/models/base_terrain/: base_terrain.blend  base_terrain.mtl
resources/models/tree/: tree.blend  tree.mtl
resources/shaders/: basicMaterialShader.vert  basicShader.frag  geometryPassDeferred.frag  geometryPassDeferred.vert  lightSourceShader.frag  lightingPassDeferred.frag  lightingPassDeferred.vert  shadow.vert  shadowTest.frag  standardShader.frag  standardShader.vert
shaders/: basicMaterialShader.frag  basicShader.vert  lightShader.frag  lightShader.vert  lightTextureShader.frag  lightingShader.frag  lightingShader.vert  shader.frag  shader.vert  standardShader.vert
src/: glad.c  main.cpp  main_old.cpp
src/Core/: Application.cpp  Application.h  OpenGLContext.cpp  OpenGLContext.h
src/EventHandler/: EventHandler.cpp  EventHandler.h
src/Gui/: EditorGui.cpp  EditorGui.h  EditorWidget.cpp  EditorWidget.h  EditorWindow.cpp  EditorWindow.h  ParametersWidget.hpp  SceneWidget.hpp  SceneWindow.hpp
src/Renderer/: Renderer.cpp  Renderer.h
src/Window/: Window.cpp  Window.h
